<resources>
    <string name="app_name">GuiaT</string>
    <string name="mail">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register_text">No tienes una cuenta , Registrate</string>
    <string name="name">Nombre Completo</string>
    <string name="email">Correo electronico</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="register">Registrarse!</string>
    <string name="sign_out">Cerrar Sesion</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="example_title">El Sicoanalista</string>
    <string name="example_author">John Katzenbach</string>

    <string name="tours_list">Tours</string>
    <string name="menu_home">Home</string>
    <string name="cel">Celular:</string>
    <string name="routes">Rutas</string>
    <string name="tour_name">Titulo del tour</string>
    <string name="guide_tour">Guia</string>
    <string name="description_tour">Descripcion Del Tour</string>
    <string name="todo">TODO</string>
    <string name="titulo_del_tour">Titulo del Tour</string>
    <string name="name_tour">Nombre del tour</string>
    <string name="schedule">Horario:</string>
    <string name="description">Descripción</string>
    <string name="sites">Lugares</string>
    <string name="add">Agregar</string>
    <string name="offer_tour">Ofrece un tour</string>
    <string name="tours_done">Tours Completados</string>
    <string name="profile">Mi Perfil</string>
    <string name="reserve_now">Reservar Ahora!</string>
    <string name="chat">Chatea</string>
    <string name="schudele_example">De Lunes a Viernes 10-14 Sabado y Domingo 8 - 16</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="chat_with_user">Chat con usuario</string>
    <string name="Usuers_in_the_chat">Usuarios en el chat</string>
    <string name="text_example">texto ejemplo</string>
    <string name="write_a_message">Escribe un mensaje</string>
    <string name="send">Enviar</string>
    <string name="user_example">Usuario Ejemplo</string>
    <string name="mail_example">Correo ejemplo: qwerty@examlpe.com</string>
    <string name="number_example">0123456789</string>
</resources>