<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/profile"/>

        <item
            android:id="@+id/guidebookFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/addTourFragment"
            android:icon="@drawable/ic_tour"
            android:title="@string/offer_tour"/>

        <item
            android:id="@+id/chatListFragment"
            android:icon="@drawable/ic_message"
            android:title="Chats"/>

    </group>
</menu>